deploy/gitops/catalog/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: polaris
  namespace: shirokuma-dev
  labels:
    app.kubernetes.io/name: polaris
    app.kubernetes.io/component: catalog-server
    app.kubernetes.io/part-of: shirokuma
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: polaris
    app.kubernetes.io/component: catalog-server
  ports:
    - name: http
      port: 8181
      targetPort: http
      protocol: TCP
